k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: petcare
spec:
  serviceName: postgres-service
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17.4

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: pgdata

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
