k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-care-ingress
  namespace: petcare

spec:
  ingressClassName: traefik

  rules:
    - host: pet-care.local

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
